--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
         <activity
             android:name=".RecipeInput"
             android:label="@string/title_activity_recipe_input"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Display"
+            android:label="@string/title_activity_display"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
